fix: fix overflow and sticky header in width under 768px

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -20,7 +20,6 @@ button {
 
 .main {
   min-height: calc(100vh - 60px - 45px);
-  overflow: hidden;
 
   @include media-tablet {
     min-height: calc(100vh - 60px - 70px);
